# MemMeowMeow

./: README.md  pyproject.toml
src/: main.py
src/MemMeowMeow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/core/: __init__.py  process.py  types.py
src/gui/: main_window.py
src/gui/widgets/: __init__.py  address_table.py  process_list.py
