[project]
name = "MemMeowMeow"
version = "0.2.0"
description = "A chaotic little gremlin that crawls into your RAM with its tiny paws and lets you poke, prod, boop, and bonk process memory. Meow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.0.0",
    "psutil>=7.1.3",
]

[project.scripts]
MemMeowMeow = "main:main"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
